# skill-quiver

./: .gitignore  LICENSE  README.md  pyproject.toml  skill-quiver-spec.md  spec.md
openspec/changes/archive/2026-02-22-implement-quiv-cli/: design.md  tasks.md
openspec/changes/archive/2026-02-22-implement-quiv-cli/specs/cli-framework/: spec.md
openspec/changes/archive/2026-02-22-implement-quiv-cli/specs/license-tracking/: spec.md
openspec/changes/archive/2026-02-22-implement-quiv-cli/specs/provenance-tracking/: spec.md
openspec/changes/archive/2026-02-22-redefine-quiv-init/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-22-redefine-quiv-init/specs/skill-init/: spec.md
openspec/changes/archive/2026-02-22-simplify-cli-surface/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-23-track-provenance-in-git/: design.md  proposal.md  tasks.md
openspec/changes/implement-quiv-cli/: proposal.md
openspec/specs/cli-framework/: spec.md
openspec/specs/license-tracking/: spec.md
openspec/specs/manifest-parsing/: spec.md
openspec/specs/provenance-tracking/: spec.md
openspec/specs/repo-init/: spec.md
openspec/specs/skill-init/: spec.md
openspec/specs/skill-packaging/: spec.md
openspec/specs/skill-validation/: spec.md
openspec/specs/sync-engine/: spec.md
src/skill_quiver/: __init__.py  __main__.py  cli.py  errors.py  init.py  manifest.py  package.py  provenance.py  sync.py  validate.py
tests/: conftest.py  test_cli.py  test_init.py  test_manifest.py  test_package.py  test_provenance.py  test_sync.py  test_validate.py
(+8 files in other folders)
